# AI-ML-Forex-Predictor

./: .env.example  .gitignore  README.md  README_TECHNICAL.md  evaluate_10h.py  main.py  pyproject.toml
.github/workflows/: create-branches.yml
app/: config.py  db.py
app/ai/: aggregate.py  ai_predict.py  news.py  overview.py  schemas.py  sentiment.py
app/api/: main.py  schemas.py
app/api/routes/: history.py  metrics.py  pairs.py  predict.py
app/data/: fetch.py  split_data.py
app/evaluate/: evaluate_holdout.py
app/features/: tabular.py
app/models/: lstm_model.py
app/serving/: model_loader.py
app/train/: train_lstm.py  train_meta.py  train_xgb.py
conversions/: eurusd_2y_hourly.csv
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AIOverviewCard.tsx  AnalysisProgress.tsx  DisclaimerBanner.tsx  MetricsFooter.tsx  NewsSection.tsx  PairPicker.tsx  PredictionPanel.tsx  PredictionsPanel.tsx  (+2 more)
models/EURUSD/: holdout_predictions.csv  lstm.pt  lstm_scaler.pkl  lstm_test_labels.npy  lstm_test_probs.npy  lstm_val_labels.npy  lstm_val_probs.npy  meta.pkl  metrics.json  xgb.json
models/GBPUSD/: holdout_predictions.csv  lstm.pt  lstm_scaler.pkl  lstm_test_labels.npy  lstm_test_probs.npy  lstm_val_labels.npy  lstm_val_probs.npy  meta.pkl  metrics.json  xgb.json
models/USDINR/: holdout_predictions.csv  lstm.pt  lstm_scaler.pkl  lstm_test_labels.npy  lstm_test_probs.npy  lstm_val_labels.npy  lstm_val_probs.npy  meta.pkl  metrics.json  xgb.json
scripts/: smoke_test.py  test_news_pipeline.py
(+2 files in other folders)
