[project]
name = "ai-ml-forex-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.45.0",
    "xgboost>=3.2.0",
    "yfinance>=1.3.0",
]
